Fix most of the optical alignment bugs 🥵

--- a/src/css/components/resources.sass
+++ b/src/css/components/resources.sass
@@ -14,21 +14,21 @@
     background-color: $slate-200
 
   @at-root
-    .resource-icon-frame
-      display: flex
-      justify-content: center // Center all
-      align-items: center     // Center all
-      height: $button-height
-      width: $button-height
-      .resource-icon
-        &:first-child
-          height: $icon-height
-          width: $icon-height
-          color: $slate-800
-        &:last-child
-          height: $icon-height
-          width: $icon-height
-          color: $slate-400
+    //// .resource-icon-frame
+    ////   display: flex
+    ////   justify-content: center // Center all
+    ////   align-items: center     // Center all
+    ////   height: $button-height
+    ////   width: $button-height
+    .resource-icon
+      &:first-child
+        height: $icon-height
+        width: $icon-height
+        color: $slate-800
+      &:last-child
+        height: $icon-height
+        width: $icon-height
+        color: $slate-400
 
   @at-root
     .resource-name
